# jit.realsense

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  jit.realsense.cpp  jit.realsense.hpp  librealsense2_Poller_bsd.patch  max.jit.realsense.cpp  max_utils.hpp
patch/: example.maxpat
